--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-appdirs==1.4.4
 asgiref==3.3.1
-distlib==0.3.1
-Django==3.1.3
-django-crispy-forms==1.10.0
-filelock==3.0.12
-mysql-connector-python==8.0.20
-Pillow==8.0.1
-pytz==2020.4
-six==1.15.0
+atomicwrites==1.4.0
+attrs==20.3.0
+colorama==0.4.4
+Django==3.1.6
+flake8==3.8.4
+gunicorn==20.0.4
+iniconfig==1.1.1
+mccabe==0.6.1
+packaging==20.9
+Pillow==8.1.0
+pluggy==0.13.1
+py==1.10.0
+pycodestyle==2.6.0
+pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.2.2
+pytz==2021.1
 sqlparse==0.4.1
-virtualenv==20.2.2
-virtualenvwrapper-win==1.2.6
+toml==0.10.2
+whitenoise==5.2.0
